Typesense init (#44)
* add typesense feature
