# apps/api/dtos/search-dtos.go
@@ -1,0 +1,9 @@
+package dtos
+
+type CreateSearchRecipe struct {
+	Id           string   `json:"id"`
+	Author       string   `json:"author"`
+	Name         string   `json:"name"`
+	Instructions []string `json:"instructions"`
+	Ingredients  []string `json:"ingredients"`
+}
